Found out that the width was broken on mobile - fixed

--- a/src/scripts/main/public/styles/main.css
+++ b/src/scripts/main/public/styles/main.css
@@ -51,23 +51,25 @@ main {
     outline: none;
     background: none;
     /* width: 5%; Currently deciding width or having the size not be 5%.*/
-    min-width: 6rem; /*Should stop sidebar from shrinking under 5.25rem (1px = 0.063rem )*/
+    min-width: 5.25rem; /*Should stop sidebar from shrinking under 5.25rem (1px = 0.063rem )*/
     cursor: pointer;
     border-radius: 10px;
 
     /* Adding our style to buttons. Decided that we will have text under icons instead of a toggled sidebar*/
     display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: center;
+	flex-direction: column;
+	flex-wrap: nowrap;
+	justify-content: space-evenly;
 	align-items: center;
-    text-align: center;
 	align-content: stretch;
     background-color: var(--lecoder-purple, purple);
     color: white;
     flex: 1;
     text-decoration: none;
+
 }
+
+
 
 .sideButton:hover      {
     background: var(
@@ -107,5 +109,22 @@ header img {
     padding: auto;
     margin: auto;
     margin-left: 10px;
-    width: 70%;
+    width: 75%;
 }
+
+@media (max-width: 978px) {
+    html, body {
+        overflow: hidden;
+    }
+
+    .sidebar {
+        min-width: 0px;
+        
+    }
+
+    .sidebar a span{
+        display: none;
+    }
+        
+    }
+
